Basic pages structure

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,7 +1,5 @@
-/* Generic colors */
-$green: #acbb71;
-$green-hover: darken($green, 15%);
-$darkGreen: #717B4A;
-$darkGreen-hover: darken($darkGreen, 15%);
-$hardGreen: #185511;
-$hardGreen-hover: darken($hardGreen, 15%);
+$red: #ED1C24;
+$red-dark: darken($red, 15%);
+$green: #00A02A;
+$green-medium: darken($green, 5%);
+$green-dark: darken($green, 15%);
