--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,6 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-
 // endbower
 @import "flexslider-compass/flexslider.scss";
 
@@ -22,6 +21,7 @@ html, body {
     height: 100%;
     font: 16px/1.4 'Open Sans',sans-serif;
     text-align: left;
+    color: #666;
 }
 
 body {
@@ -47,7 +47,7 @@ img::-moz-selection {
 }
 
 a, a:hover, a:focus {
-    color: $green;
+    color: $red;
 }
 
 section {
@@ -70,7 +70,7 @@ section {
  .navbar-default .navbar-nav > .active > a:hover, 
  .navbar-default .navbar-nav > .active > a:focus {
     color: #fff;
-    background-color: #ED1C24; }
+    background-color: $red; }
 
 .navbar-brand {
     padding: 5px 0;
@@ -78,12 +78,29 @@ section {
         height: 60px;
     }
 }
+.btn-primary {
+  border: 1px solid $green;
+  background-color: $green;
+  color: #fff;
+  box-shadow: 0 3px 0 0 $green-dark;
+  &:hover, &:focus, &:active {
+    color: #fcfcfc;
+    border-color: $green-medium;
+    background-color: $green-medium;
+    box-shadow: 0 3px 0 0 $green-dark;
+  }
+  &:active {
+    box-shadow: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
+  }
+}
 /* ===================
   Home section
   ================= */
 /*Flexslider*/
 .flexslider {
-    margin: 0 0 35px;
+    margin: 0;
     padding: 0;
     position: relative;
     border: 0;
@@ -138,9 +155,10 @@ section {
     height: 4px;
     width: 100%;
     position: relative;
-    top: -2em;
+    top: -4px;
+    z-index: 200;
     .progress_bar {
-        background: #ED1C24;
+        background: $red;
         height: 4px;
         width: 0;
         position: relative;
@@ -149,7 +167,127 @@ section {
 #home {
   padding-top: 0;
 }
+#home-info {
+  padding: 20px 0;
+  margin-top: -4px;
+  color: #fff;
+  h4 {
+    font-family: 'Indie Flower', cursive;
+    font-size: 28px;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+  }
+}
+#carousel-marci {
+  width: 610px;
+  margin: 0 auto;
+  img {
+    display: inline-block;
+    opacity: 0.4;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+#home-preturi {
+  padding: 30px 0 10px;
+  h2 {
+    color: $red-dark;
+    padding-bottom: 20px;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+  }
+}
+.home-reclama {
+  padding: 30px 0 20px;
+}
+.round-tc {
+  .carousel-inner{
+    border-radius: 150px;
+    border: 10px solid #ddd;
+  }
+  .item {
+    border-radius: 150px;
+    border:1px dashed #a1a1a1;
+    opacity: 0;
+    transition-property: opacity;
+  }
 
+  .active {
+    opacity: 1;
+  }
+  img {
+    border-radius: 150px;
+  }
+}
+.testimonial {
+  min-height: 280px;
+  p {
+    position: relative;
+    background-color: #f5f5f5;
+    padding: 20px 50px;
+    border-radius: 20px;
+    margin: 0;
+    &:before, &:after {
+      font-family: Georgia, serif;
+      color: #999;
+      content: "\201C";
+      font-size: 80px;
+      font-style: normal;
+      line-height: 1;
+      position: absolute;
+    }
+    &:before {
+      left: 10px;
+      top: 0;
+    }
+    &:after {
+      bottom: -0.5em;
+      content: "\201D";
+      right: 10px;
+    }
+  }
+  .testimonial-arrow-down {
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #f5f5f5;
+    height: 0;
+    margin: 0 0 0 25px;
+    width: 0;
+  }
+  h5 {
+    font-weight: 600;
+    img {
+      width: 130px;
+      margin-bottom: 5px;
+    }
+  }
+}
+
+.carbon-fiber {
+  background: #222 url(../images/fiber.png) repeat top left;
+}
+.red {
+  color: $red;
+}
+.green {
+  color: $green;
+}
+.greyscaled {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+}
+.grey-background {
+  background: #eee;
+}
+.fs18 {
+  font-size: 18px;
+}
+.indie-title {
+  font-family: 'Indie Flower', cursive;
+  font-size: 38px;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+
+}
 
 @media (min-width: 768px) {
     .navbar-nav > li > a {
