--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,16 +49,6 @@ a, a:hover, a:focus {
     color: $red;
 }
 
-section {
-    height: auto;
-    min-height: 100%;
-    padding: 40px 0;
-}
-
-.footer {
-    padding: 20px 0 10px;
-}
-
 /* Navigation */
 .navbar {
     min-height: 70px;
@@ -77,6 +67,12 @@ section {
         height: 60px;
     }
 }
+.nav-pills > li {
+  float: none;
+}
+.navbar-default .navbar-toggle {
+  margin-top: 18px;
+}
 .btn-primary {
   border: 1px solid $green;
   background-color: $green;
@@ -94,6 +90,10 @@ section {
     margin-top: 3px;
   }
 }
+
+section.text-section .container {
+  padding: 0 25px;
+}
 /* ===================
   Home section
   ================= */
@@ -109,7 +109,7 @@ section {
     height: 60vh;
     overflow: hidden;
     .slides {
-      height: 100%; 
+      height: 100%;
         > li {
           height: 100%; 
             display: none;
@@ -121,17 +121,29 @@ section {
             top: 50%;
             left: 50%;
             transform: translateX(-50%) translateY(-50%);
-            height: 100%;
+            min-height: 100%;
+            min-width: 100%;
+            width: auto;
         }
+    }
+    .overlay {
+      background: url(../images/overlay.png) repeat top left;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 100;
+      width: 100%;
+      height: 100%;
     }
 }
 
 .flex-caption {
     position: relative;
-    padding: 0 0 0 200px;
+    padding: 0 20px;
     top: 50%;
     animation-duration: 3s;
     animation-delay: 1s;
+    z-index: 200;
     h2 {
       text-transform: uppercase;
       color: #fff;
@@ -163,25 +175,23 @@ section {
         position: relative;
     }
 }
-#home {
-  padding-top: 0;
-}
 #home-info {
   padding: 20px 0;
   margin-top: -4px;
   color: #fff;
   h4 {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Patua One', cursive;
     font-size: 28px;
     text-shadow: 0 1px 1px rgba(0,0,0,0.8);
   }
 }
 #carousel-marci {
-  width: 610px;
+  width: 310px;
   margin: 0 auto;
   img {
-    display: inline-block;
+    display: block;
     opacity: 0.4;
+    margin: 0 auto;
     &:hover {
       opacity: 1;
     }
@@ -195,7 +205,7 @@ section {
     text-shadow: 0 1px 1px rgba(0,0,0,0.8);
   }
 }
-.home-reclama {
+.page-content-container {
   padding: 30px 0 20px;
 }
 .round-tc {
@@ -261,6 +271,82 @@ section {
   }
 }
 
+/* Contact section */
+#contact {
+  position: relative;
+  z-index: 50;
+  padding: 0 0 40px;
+  min-height: 0;
+  iframe {
+    width: 100%;
+    height: 344px;
+    box-shadow: 0 10px 10px -10px #333;
+  }
+  #iframe_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 344px;
+    width: 100%;
+    z-index: 55;
+    background: url(../images/transparent.gif) repeat top left;
+  }
+  form {
+    margin-top: 30px;
+    label {
+      font-size: 14px;
+      &.error {
+        margin-bottom:10px;
+        font-size:12px;
+        line-height:12px;
+        color:#c0392b;
+        color: $red;
+        font-weight: 400;
+      }
+    }
+    input[type="text"], input[type="email"], textarea {
+      &:focus {
+        border-color:#191919;
+        box-shadow:none;
+      }
+      &:disabled {
+        background:#fff
+      }
+      &.error {
+        background:#e6e6e6;
+        border-color:#c0392b
+      }
+    }
+  }
+  #success, #error {
+    display: none;
+    span {
+      display:block;
+      p {
+        margin-top:20px
+      }
+    }
+  }
+  #success span p {
+    color: $green;
+  }
+  #error span p {
+    color: $red;
+  }
+  hr {
+    margin: 30px;
+  }
+}
+
+footer {
+  padding: 30px 0;
+  p {
+    margin:0;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+  }
+}
+
 .carbon-fiber {
   background: #222 url(../images/fiber.png) repeat top left;
 }
@@ -279,15 +365,109 @@ section {
 .fs18 {
   font-size: 18px;
 }
+.fs20 {
+  font-size: 20px;
+}
+.fs28 {
+  font-size: 28px;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+}
 .indie-title {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Patua One', cursive;
   font-size: 38px;
   text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+}
 
+.indie-text {
+  font-family: 'Patua One', cursive;
+}
+
+.small-title {
+  font-weight: 700;
+  padding-bottom: 7px;
+  border-bottom: 1px solid #bbb;
+}
+
+.title-list {
+  list-style: none;
+  margin: 0;
+  padding-left: 10px;
+  li {
+    font-weight: 700;
+    padding: 9px 0;
+    border-bottom: 1px solid #bbb;
+    color: $green;
+    float: left;
+    clear: left;
+  }
+}
+.addres-set {
+  width: calc(100% - 90px);
+  margin-left: 10px;
 }
 
 @media (min-width: 768px) {
-    .navbar-nav > li > a {
-        margin: 10px 0;
+  section.text-section .container {
+    padding: 0;
+  }
+  .navbar-nav > li > a {
+      margin: 10px 0;
+  }
+  .nav-pills > li {
+    float: left;
+  }
+  .flex-caption {
+    padding: 0 0 0 200px;
+  }
+  #carousel-marci {
+    width: 610px;
+    img {
+      display: inline-block;
+      margin: 0;
     }
+  }
+}
+
+.panel-default > .panel-heading {
+  color: #fff;
+  background-color: #ED1C24;
+  border-color: #ED1C24;
+  font-family: 'Patua One', cursive;
+  a {
+    display: block;
+    &:focus {
+      color: #fff;
+    }
+    &:hover, &:focus {
+      text-decoration: none;
+    }
+  }
+  &:hover, &:focus {
+    background-color: #fff;
+    color: #ED1C24;
+    a:focus {
+      color: #ED1C24;
+    }
+  }
+}
+
+.gal-image {
+  padding-bottom: 15px;
+  img {
+    border-radius: 3px;
+    border: 1px solid #eee;
+    box-shadow: 0 0 3px rgba(0,0,0,0.4);
+    &:hover {
+      box-shadow: 0 0 8px rgba(0,0,0,0.5);
+    }
+  }
+}
+
+.strong-line-1 {
+  margin: 30px 0 60px;
+  border-top: 4px solid #eee;
+}
+.strong-line-2 {
+  margin: 45px 0 30px;
+  border-top: 4px solid #eee;
 }
