--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -400,6 +400,11 @@ footer {
     display: inline-block;
   }
 }
+@media (min-width: 1200px) {
+  .padding-bottom-large {
+    padding-bottom: 60px;
+  }
+}
 
 .panel-default > .panel-heading {
   color: #fff;
@@ -438,7 +443,7 @@ footer {
 
 .strong-line {
   margin: 10px 0;
-  border-top: 4px solid #eee;
+  border-top: 1px solid #666;
 }
 .strong-line-1 {
   margin: 30px 0 60px;
